--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.connect.share": "4.2.3",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.probuilder": "5.2.2",
     "com.unity.recorder": "4.0.2",
