--- a/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -12,9 +12,14 @@
                 "value": "{\"m_Value\":true}"
             },
             {
+                "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
+                "key": "createDefaultBuildsFolder",
+                "value": "{\"m_Value\":true}"
+            },
+            {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "buildOutputDirList",
-                "value": "{\"m_Value\":\"\"}"
+                "value": "{\"m_Value\":\"F:/Temp Unity/WiSe23_Leveldesign_Spielname_UnityProject/WebGL Builds/Reclaim your Sould_Playtest;F:/Temp Unity/WiSe23_Leveldesign_Spielname_UnityProject/WebGL Builds;;;;;;;;\"}"
             }
         ]
     }
