--- a/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -19,7 +19,7 @@
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "buildOutputDirList",
-                "value": "{\"m_Value\":\"F:/Temp Unity/WiSe23_Leveldesign_Spielname_UnityProject/WebGL Builds/Reclaim your Soul_Playtest;F:/Temp Unity/WiSe23_Leveldesign_Spielname_UnityProject/WebGL Builds/Reclaim your Sould_Playtest;F:/Temp Unity/WiSe23_Leveldesign_Spielname_UnityProject/WebGL Builds;;;;;;;\"}"
+                "value": "{\"m_Value\":\"F:/Temp Unity/WiSe23_Leveldesign_Reclaim_your_Soul_UnityProject/WebGL Builds/Reclaim your Soul;F:/Temp Unity/WiSe23_Leveldesign_Spielname_UnityProject/WebGL Builds/Reclaim your Soul_Playtest;F:/Temp Unity/WiSe23_Leveldesign_Spielname_UnityProject/WebGL Builds/Reclaim your Sould_Playtest;F:/Temp Unity/WiSe23_Leveldesign_Spielname_UnityProject/WebGL Builds;;;;;;\"}"
             }
         ]
     }
